--- a/Webapp/public/admin/package.json
+++ b/Webapp/public/admin/package.json
@@ -10,6 +10,7 @@
     "react": ">=16.8.0",
     "react-chartjs-2": "3.3.0",
     "react-dom": ">=16.8.0",
+    "react-icons": "^4.10.1",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
