--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "prop-types": "^15.8.1",
     "react-bootstrap": "^2.8.0",
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
