--- a/Webapp/public/client/package.json
+++ b/Webapp/public/client/package.json
@@ -39,6 +39,7 @@
     "bootstrap-icons": "^1.10.5",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
+    "mdb-react-ui-kit": "^6.1.0",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "perfect-scrollbar": "1.5.5",
