--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mango",
   "main": "Server.js",
   "scripts": {
-    "start": "node Server.js",
+    "start": "nodemon Server.js",
     "build": "node build",
     "test": "node test",
     "eject": "node eject",
@@ -21,11 +21,20 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "express": "^4.18.2",
+    "mdb-react-ui-kit": "^6.1.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.1",
     "react-bootstrap": "^2.8.0",
+    "react-datetime": "^3.2.0",
+    "react-ios-time-picker": "^0.2.2",
     "react-modal": "^3.16.1",
+    "react-moment": "^1.1.3",
     "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.3.0"
+    "react-phone-number-input": "^3.3.0",
+    "time-zone": "^2.0.0"
   }
 }
