--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mdb-react-ui-kit": "^6.1.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
