--- a/Webapp/public/client/package.json
+++ b/Webapp/public/client/package.json
@@ -35,6 +35,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.5.0",
     "bootstrap": "4.6.2",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "2.9.4",
