--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Bich Ngan & Minh Anh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
