--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
