--- a/Webapp/public/admin/package.json
+++ b/Webapp/public/admin/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "reactstrap": "8.10.0",
+    "redux": "^4.2.1",
     "sass": "1.62.1"
   },
   "scripts": {
