--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-moment": "^1.1.3",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.0",
+    "react-table": "^7.8.0",
     "time-zone": "^2.0.0"
   }
 }
