--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "mdb-react-ui-kit": "^6.1.0",
     "moment": "^2.29.4",
